# ChangeLog for media-libs/libkexif
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libkexif/ChangeLog,v 1.17 2006/08/26 19:51:29 weeve Exp $

  26 Aug 2006; Jason Wever <weeve@gentoo.org> libkexif-0.2.2.ebuild:
  Stable on SPARC wrt bug #145102.

*libkexif-0.2.3 (20 May 2006)

  20 May 2006; Carsten Lohrke <carlo@gentoo.org> +libkexif-0.2.3.ebuild:
  Version bump.

  17 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libkexif-0.2.2.ebuild:
  ppc stable, bug #113723

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> libkexif-0.2.2.ebuild:
  Mark 0.2.2 stable on ia64

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> libkexif-0.2.2.ebuild:
  Mark 0.2.2 stable on alpha

  15 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org> libkexif-0.2.2.ebuild:
  Stable on amd64, bug 113723.

  03 Jan 2006; Petteri Räty <betelgeuse@gentoo.org> libkexif-0.2.2.ebuild:
  Marked stable on x86 for bug #113723.

  04 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org> libkexif-0.2.2.ebuild:
  Stable on amd64, bug 113723.

*libkexif-0.2.2 (25 Sep 2005)

  25 Sep 2005; Carsten Lohrke <carlo@gentoo.org> +libkexif-0.2.2.ebuild:
  version bump

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> libkexif-0.2.1-r1.ebuild:
  add ~alpha ~ia64

*libkexif-0.2.1-r1 (08 Aug 2005)

  08 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> +libkexif-0.2.1-r1.ebuild,
  +files/libkexif-0.2.1-gcc4.patch:
  Added patch for gcc4 compatibility (and general sanity).

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> libkexif-0.2.1.ebuild:
  stable on amd64

  03 Mar 2005; Carsten Lohrke <carlo@gentoo.org> libkexif-0.2.1.ebuild:
  stable on x86

  12 Jan 2005; Jason Wever <weeve@gentoo.org> libkexif-0.2.1.ebuild:
  Added ~sparc keyword.

*libkexif-0.2.1 (04 Jan 2005)

  04 Jan 2005; Carsten Lohrke <carlo@gentoo.org> +libkexif-0.2.1.ebuild:
  version bump

  31 Dec 2004; Jason Wever <weeve@gentoo.org> libkexif-0.1.ebuild:
  Added ~sparc keyword.
