@@ -6,6 +6,7 @@ DIST libkexif-0.1.tar.bz2 472426
 DIST libkexif-0.2.1.tar.bz2 441169
 DIST libkexif-0.2.2.tar.bz2 442833 RMD160 41c212b6410bdcdf6f7d6dff0c9b13cfd1c64d42 SHA1 9962ca1f52436f649950600b643f01ee935a4858 SHA256 4e2353d19f28972fbf29eeee7a6f60426b09c4c090ae48b05ff4aafdb1471000
 DIST libkexif-0.2.3.tar.bz2 458355 RMD160 26e2ac01a47611322da75f8cec2117f4a0fc45ea SHA1 d1d11067ad826f6737b60430dc46460bd91a1e82 SHA256 49ea3f42f9923b31d5a5762df6efea2373dcbab6221ef0331b546c3eac6332fe
+DIST libkexif-0.2.4.tar.bz2 458051 RMD160 cc5888d45787ced2cbd9e9fa4a46db027e9c61c1 SHA1 168aa4d260243f19ebc664d36532eeee2bea7928 SHA256 84963881227f96ecb013413997d64db2b93d4b45d41699629877eb678f8ee100
 EBUILD libkexif-0.1.ebuild 548 RMD160 cbf107ee4646e10e7d2dc33a185190fb74dde7be SHA1 3d490864536b85119d58dacdb082835715335d17 SHA256 dfdde0aad87d8ce6fa7251a0ba5090a844047adf2e5a8c0e4184d487d978be73
 MD5 d281168730da1227d5539d2d301767d2 libkexif-0.1.ebuild 548
 RMD160 cbf107ee4646e10e7d2dc33a185190fb74dde7be libkexif-0.1.ebuild 548
@@ -26,10 +27,14 @@ EBUILD libkexif-0.2.3.ebuild 564 RMD160 1123d181f739388b3bbe8863a25baaa4f125ed6f
 MD5 bb182acea5d7adbef7c95f27beb8314c libkexif-0.2.3.ebuild 564
 RMD160 1123d181f739388b3bbe8863a25baaa4f125ed6f libkexif-0.2.3.ebuild 564
 SHA256 56ce715f9d595864468a41c9268549dca8616578ea3daa0abe7329aadcfdad94 libkexif-0.2.3.ebuild 564
-MISC ChangeLog 2161 RMD160 ef4a8b32d95d280b0d25f31c351845779fcd259c SHA1 6af50b88642c8b4c11b4911a237d8c92d4275a23 SHA256 c1b753839ab65e75acf6be380fbc8c21d8c66721dba490bb137035ced3b0ec4e
-MD5 73eb88e4bc9aa9e6ee9b61014d613a08 ChangeLog 2161
-RMD160 ef4a8b32d95d280b0d25f31c351845779fcd259c ChangeLog 2161
-SHA256 c1b753839ab65e75acf6be380fbc8c21d8c66721dba490bb137035ced3b0ec4e ChangeLog 2161
+EBUILD libkexif-0.2.4.ebuild 564 RMD160 a4d158a6d2a01ea712b6cdb2d5982a329d612287 SHA1 8a8a03bd5d7953bb211a2ef72ca043f4ecba6cbd SHA256 13bd755931c15984dfb1a2f158e080d6961cc334164c3d42dddb5ce0c6ca7887
+MD5 51da0b52353025209bfc8629f3e99e85 libkexif-0.2.4.ebuild 564
+RMD160 a4d158a6d2a01ea712b6cdb2d5982a329d612287 libkexif-0.2.4.ebuild 564
+SHA256 13bd755931c15984dfb1a2f158e080d6961cc334164c3d42dddb5ce0c6ca7887 libkexif-0.2.4.ebuild 564
+MISC ChangeLog 2279 RMD160 55a32ffe7b007d5e7b25e43b72a80b3fc09a26a1 SHA1 23450da7d77d930b265b016761318950f4595597 SHA256 5e31c9ea35f8c9b0584fe74cdf6f9d40fee8c6e6001c7f6a9fdf8ec145724f95
+MD5 2228bc4b4e7a6c6a657f405091505e74 ChangeLog 2279
+RMD160 55a32ffe7b007d5e7b25e43b72a80b3fc09a26a1 ChangeLog 2279
+SHA256 5e31c9ea35f8c9b0584fe74cdf6f9d40fee8c6e6001c7f6a9fdf8ec145724f95 ChangeLog 2279
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -49,3 +54,6 @@ SHA256 6914bb5d6c5483f05abd07afb6a620a04a8e9d7f20045afef6b68296673a4a61 files/di
 MD5 01cfedac9864c77c8d9e6680adb11393 files/digest-libkexif-0.2.3 247
 RMD160 08fd34612fe90e2ab9fdbf6e16274850ce77ea23 files/digest-libkexif-0.2.3 247
 SHA256 4f4dd868ef73d47d7ba3d0ad52e5a46f6b9d44129d8abfd59c22072d72ff21e5 files/digest-libkexif-0.2.3 247
+MD5 dd332da1043c6a49d26b28b4550207d0 files/digest-libkexif-0.2.4 247
+RMD160 77da29fc45b7890325148f559e412e681df81270 files/digest-libkexif-0.2.4 247
+SHA256 8c83b40518ec7de570c8ddf92cae0345a473842df94a3652e056b7fed3d54524 files/digest-libkexif-0.2.4 247
