@@ -1,0 +1,3 @@
+MD5 bb3231a388c7117769ef1d0fb99a0a98 libkexif-0.2.4.tar.bz2 458051
+RMD160 cc5888d45787ced2cbd9e9fa4a46db027e9c61c1 libkexif-0.2.4.tar.bz2 458051
+SHA256 84963881227f96ecb013413997d64db2b93d4b45d41699629877eb678f8ee100 libkexif-0.2.4.tar.bz2 458051
