@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libkexif
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkexif/ChangeLog,v 1.17 2006/08/26 19:51:29 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkexif/ChangeLog,v 1.18 2006/09/18 12:21:13 caleb Exp $
+
+*libkexif-0.2.4 (18 Sep 2006)
+
+  18 Sep 2006; Caleb Tennis <caleb@gentoo.org> +libkexif-0.2.4.ebuild:
+  version bump
 
   26 Aug 2006; Jason Wever <weeve@gentoo.org> libkexif-0.2.2.ebuild:
   Stable on SPARC wrt bug #145102.
